<resources>
    <string name="app_name">Ecommerce</string>
    <string name="skip">Skip</string>
    <string name="email_id">Email Id</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="new_user">New User?</string>
    <string name="signup_here">SignUp here</string>
    <string name="or">OR</string>
    <string name="hello_world">Android Material Design App Bar/ActionBar</string>
    <string name="action_settings">Settings</string>
    <string name="action_share">Share</string>
    <string name="action_search">Search</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
</resources>
