<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.SignInActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_skip"
            android:text="@string/skip"
            android:layout_alignParentRight="true"
            android:layout_marginTop="@dimen/padding_normal_8"
            android:layout_marginRight="@dimen/padding_normal_8"
            android:textColor="@color/text_color"/>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/logo"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/btn_skip"
            android:layout_marginRight="@dimen/padding_normal_8"
            android:layout_marginLeft="@dimen/padding_normal_8"
            android:src="@drawable/images"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/email_id"
            android:layout_below="@id/logo"
            android:layout_marginRight="@dimen/padding_too_large_30"
            android:layout_marginLeft="@dimen/padding_too_large_30"
            android:layout_marginTop="@dimen/padding_extra_large_20"
            android:paddingLeft="@dimen/padding_small_5"
            android:paddingTop="@dimen/padding_small_5"
            android:hint="@string/email_id"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/password"
            android:layout_below="@id/email_id"
            android:layout_marginRight="@dimen/padding_too_large_30"
            android:layout_marginLeft="@dimen/padding_too_large_30"
            android:layout_marginTop="@dimen/padding_extra_large_20"
            android:paddingLeft="@dimen/padding_small_5"
            android:paddingTop="@dimen/padding_small_5"
            android:hint="@string/password"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/login"
            android:textColor="@color/white"
            android:layout_below="@id/password"
            android:background="@drawable/rounded_green_login"
            android:layout_marginRight="@dimen/padding_too_large_30"
            android:layout_marginLeft="@dimen/padding_too_large_30"
            android:layout_marginTop="@dimen/padding_extra_large_20"
            android:paddingLeft="@dimen/padding_small_5"
            android:paddingTop="@dimen/padding_small_5"
            android:text="@string/login"
            android:textAlignment="center"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:id="@+id/forgot_password"
            android:layout_below="@id/login"
            android:layout_marginTop="@dimen/padding_small_5"
            android:textColorHint="@color/colorAccent"
            android:hint="@string/forgot_password"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:id="@+id/or"
            android:layout_below="@id/forgot_password"
            android:layout_marginTop="@dimen/padding_large_15"
            android:layout_marginBottom="@dimen/padding_extra_large_20"
            android:hint="@string/or"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/or"
            android:layout_marginTop="@dimen/padding_extra_large_20"
            android:orientation="horizontal"
            android:gravity="center_horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/new_user"
            android:layout_below="@id/or"
            android:layout_marginRight="@dimen/padding_small_5"
            android:hint="@string/new_user"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/signup_here"
            android:layout_below="@id/or"
            android:hint="@string/signup_here"
            android:textColorHint="@color/colorAccent"
            />
    </LinearLayout>
</RelativeLayout>
</ScrollView>